# Bot_Planning_python

./: .gitignore  Changelog.txt  README.md  TODO.txt  botplanning.deb  botplanning.service  botrunner.py  changelog.txt  cog.py  daemonUtils.py  docker-compose.yml  main.py  requirements.txt  setup.sh  utils.py
.github/workflows/: codeql.yml
bot/: docker-compose.yml
bot/api/extends/: jdr.py  modele_fiche_planning.txt  planing.py  planning.py
bot/bot/extends/: credit.txt  planing.py  planning.py
bot/web/vhost/: 100-UR_Planning.conf
bot/web/www/: index.php
bot/web/www/Calendar/: TODO.txt  index.php
bot/web/www/cgi/: const.py  create_post.py  log.txt  modele_fiche_planning.txt  settings.py
bot/web/www/css/: master.css  styleDark.css
bot/web/www/js/: jdrSwitch.js  record_form.js  updateSliderText.js
bot/web/www/pages/: createEventForm.php
botplanning/: run.py
botplanning/DEBIAN/: control  postinst
build_utils/: botplanning.service  setup.cfg
src/: BotPlanning.py  __init__.py  cog.py
src/cog_planning/: __init__.py  cog.py  const.py  settings.py  strings.py
src/cog_planning/info/: credits.txt
src/planning/: cog.py  const.py  settings.py
src/planning/info/: name.txt
web/: Dockerfile  docker-entrypoint.sh  nginx.conf
web/www/: index.php
web/www/css/: styleDark.css  styleLight.css  switchButton.css  tail.datetime-default.css
web/www/js/: durationSelect.js  tail.datetime.js
web/www/pages/: createEventForm.php  footer.html
web/www/php/: create_event.php  get_authorization_code.php  get_token.php  settings.php
(+30 files in other folders)
