[metadata]
name = union-des-rolistes-bot-planning-cog-pkg
version = 0.0.1
author = Lyss
author_email = delpratflo@cy-tech.fr
description = Un ensemble de fonctionalités de planning pour le bot discord de l'union des rôlistes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UnionRolistes/Bot_Planning_python
project_urls =
    Bug Tracker = https://github.com/UnionRolistes/Bot_Planning_python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src